#328 rename annotations. remove local caching of url